--- a/app/src/main/res/layout/activity_listagem_regs_tabuas.xml
+++ b/app/src/main/res/layout/activity_listagem_regs_tabuas.xml
@@ -12,6 +12,7 @@
         android:layout_height="40dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
+        android:onClick="volta"
         android:tint="#698060"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -34,6 +35,7 @@
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="32dp"
         android:clickable="true"
+        android:onClick="navegaAdicao"
         android:soundEffectsEnabled="true"
         app:backgroundTint="#698060"
         app:backgroundTintMode="add"
