--- a/app/src/main/res/layout/activity_listagem_regs_tabuas.xml
+++ b/app/src/main/res/layout/activity_listagem_regs_tabuas.xml
@@ -19,6 +19,7 @@
         app:srcCompat="@drawable/setaesquerda" />
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="24dp"
