--- a/app/src/main/res/layout/activity_add_reg_tabuas.xml
+++ b/app/src/main/res/layout/activity_add_reg_tabuas.xml
@@ -12,6 +12,7 @@
         android:layout_height="40dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
+        android:onClick="volta"
         android:tint="#698060"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
