--- a/app/src/main/res/layout/activity_add_reg_tabuas.xml
+++ b/app/src/main/res/layout/activity_add_reg_tabuas.xml
@@ -88,7 +88,7 @@
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:background="@drawable/feito"
-        android:onClick="salva"
+        android:onClick="adiciona"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
