update activity mostragem de dados

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,6 +24,7 @@
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:backgroundTint="#6F9E63"
+        android:onClick="navegaGraficos"
         android:scaleType="centerCrop"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
