--- a/app/src/main/res/layout/fragment_graph_barra.xml
+++ b/app/src/main/res/layout/fragment_graph_barra.xml
@@ -1,14 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.fragmentos.GraphBarra">
+    tools:context=".activity.fragmentos.GraphBarra"
+    android:orientation="vertical">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <com.github.mikephil.charting.charts.BarChart
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="0dp"
+        android:id="@+id/graficoBarras"
+        android:layout_weight="1"
+        android:layout_marginBottom="8dp"/>
 
-</FrameLayout>
+</LinearLayout>
