--- a/app/src/main/res/layout/fragment_graph_pizza.xml
+++ b/app/src/main/res/layout/fragment_graph_pizza.xml
@@ -19,10 +19,21 @@
         android:inputType="textPersonName"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.042" />
+        app:layout_constraintVertical_bias="0.088" />
+
+    <TextView
+        android:id="@+id/txtDia"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="4dp"
+        android:text="Total produzido no dia dd/mm/yyyy"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <LinearLayout
         android:id="@+id/linearLayout2"
@@ -34,7 +45,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.287">
 
         <View
             android:id="@+id/divider11"
@@ -59,7 +71,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:background="#549845"
+                android:background="#90B77D"
                 android:gravity="center"
                 android:text="Metros cúbicos" />
 
@@ -75,7 +87,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:background="#549845"
+                android:background="#90B77D"
                 android:gravity="center"
                 android:text="Tábuas" />
 
@@ -91,7 +103,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:background="#549845"
+                android:background="#90B77D"
                 android:gravity="center"
                 android:text="Toras" />
 
@@ -127,7 +139,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
                 android:layout_weight="1"
-                android:background="#BF4F953F"
+                android:background="#D2D79F"
                 android:gravity="center" />
 
             <View
@@ -142,7 +154,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
                 android:layout_weight="1"
-                android:background="#BF4F953F"
+                android:background="#D2D79F"
                 android:gravity="center" />
 
             <View
@@ -157,7 +169,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
                 android:layout_weight="1"
-                android:background="#BF4F953F"
+                android:background="#D2D79F"
                 android:gravity="center" />
 
             <View
@@ -174,15 +186,5 @@
             android:layout_height="1dp"
             android:background="?android:attr/listDivider" />
     </LinearLayout>
-
-    <TextView
-        android:id="@+id/txtDia"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:text="Total produzido no dia dd/mm/yyyy"
-        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
