--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="purple_200">#FFBB86FC</color>
-    <color name="principal">#38B802</color>
-    <color name="secundaria">#359700</color>
-    <color name="teal_200">#2ADA03</color>
-    <color name="teal_700">#308701</color>
+    <color name="principal">#42855B</color>
+    <color name="secundaria">#90B77D</color>
+    <color name="teal_200">#514747</color>
+    <color name="teal_700">#5C4040</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 </resources>
