--- a/app/src/main/res/layout/fragment_graph_reg_mes.xml
+++ b/app/src/main/res/layout/fragment_graph_reg_mes.xml
@@ -169,5 +169,40 @@
             android:layout_height="1dp"
             android:background="?android:attr/listDivider" />
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <View
+                android:id="@+id/divider33"
+                android:layout_width="1dp"
+                android:layout_height="match_parent"
+                android:layout_weight="0"
+                android:background="?android:attr/listDivider" />
+
+            <TextView
+                android:id="@+id/txtRegMesTotal"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="#EDA1B77D"
+                android:gravity="center"
+                android:text="TextView" />
+
+            <View
+                android:id="@+id/divider34"
+                android:layout_width="1dp"
+                android:layout_height="match_parent"
+                android:layout_weight="0"
+                android:background="?android:attr/listDivider" />
+        </LinearLayout>
+
+        <View
+            android:id="@+id/divider32"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="?android:attr/listDivider" />
+
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
