--- a/app/src/main/res/layout/fragment_graph_barra.xml
+++ b/app/src/main/res/layout/fragment_graph_barra.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.fragmentos.GraphBarra"
+    tools:context=".fragmentos.GraphBarra"
     android:orientation="vertical">
 
     <com.github.mikephil.charting.charts.BarChart
