--- a/app/src/main/res/layout/fragment_graph_reg_dia.xml
+++ b/app/src/main/res/layout/fragment_graph_reg_dia.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".activity.fragmentos.GraphRegDia">
+    tools:context=".fragmentos.GraphRegDia">
 
 
     <EditText
