--- a/app/src/main/res/layout/fragment_graph_rosquinha.xml
+++ b/app/src/main/res/layout/fragment_graph_rosquinha.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".activity.fragmentos.GraphRosquinha">
+    tools:context=".fragmentos.GraphRosquinha">
 
     <com.github.mikephil.charting.charts.PieChart
         android:layout_width="match_parent"
