--- a/app/src/main/res/layout/fragment_graph_reg_dia.xml
+++ b/app/src/main/res/layout/fragment_graph_reg_dia.xml
@@ -24,206 +24,24 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.088" />
 
-    <TextView
-        android:id="@+id/txtDia"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:text="Total produzido no dia dd/mm/yyyy"
-        app:layout_constraintBottom_toTopOf="@+id/tabelaValores"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent" />
-
     <LinearLayout
-        android:id="@+id/tabelaValores"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginBottom="50dp"
         android:orientation="vertical"
-        android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.29000002">
+        app:layout_constraintTop_toBottomOf="@+id/inputDataBusca">
 
-        <View
-            android:id="@+id/divider11"
+        <com.github.mikephil.charting.charts.PieChart
+            android:id="@+id/graficoRegDiario"
             android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="?android:attr/listDivider" />
+            android:layout_height="0dp"
+            android:layout_marginBottom="8dp"
+            android:layout_weight="1" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
-
-            <View
-                android:id="@+id/divider15"
-                android:layout_width="1dp"
-                android:layout_height="match_parent"
-                android:layout_weight="0"
-                android:background="?android:attr/listDivider" />
-
-            <TextView
-                android:id="@+id/textView9"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:background="#90B77D"
-                android:gravity="center"
-                android:text="Metros cúbicos"
-                android:textStyle="bold" />
-
-            <View
-                android:id="@+id/divider21"
-                android:layout_width="1dp"
-                android:layout_height="match_parent"
-                android:layout_weight="0"
-                android:background="?android:attr/listDivider" />
-
-            <TextView
-                android:id="@+id/textView11"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:background="#90B77D"
-                android:gravity="center"
-                android:text="Tábuas"
-                android:textStyle="bold" />
-
-            <View
-                android:id="@+id/divider20"
-                android:layout_width="1dp"
-                android:layout_height="match_parent"
-                android:layout_weight="0"
-                android:background="?android:attr/listDivider" />
-
-            <TextView
-                android:id="@+id/textView10"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:background="#90B77D"
-                android:gravity="center"
-                android:text="Toras"
-                android:textStyle="bold" />
-
-            <View
-                android:id="@+id/divider19"
-                android:layout_width="1dp"
-                android:layout_height="match_parent"
-                android:layout_weight="0"
-                android:background="?android:attr/listDivider" />
-        </LinearLayout>
-
-        <View
-            android:id="@+id/divider12"
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="?android:attr/listDivider" />
-
-        <LinearLayout
-            android:id="@+id/linearLayout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <View
-                android:id="@+id/divider14"
-                android:layout_width="1dp"
-                android:layout_height="match_parent"
-                android:layout_weight="0"
-                android:background="?android:attr/listDivider" />
-
-            <TextView
-                android:id="@+id/txtCubico"
-                android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:layout_weight="1"
-                android:background="#D2D79F"
-                android:gravity="center" />
-
-            <View
-                android:id="@+id/divider16"
-                android:layout_width="1dp"
-                android:layout_height="match_parent"
-                android:layout_weight="0"
-                android:background="?android:attr/listDivider" />
-
-            <TextView
-                android:id="@+id/txtTabua"
-                android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:layout_weight="1"
-                android:background="#D2D79F"
-                android:gravity="center" />
-
-            <View
-                android:id="@+id/divider17"
-                android:layout_width="1dp"
-                android:layout_height="match_parent"
-                android:layout_weight="0"
-                android:background="?android:attr/listDivider" />
-
-            <TextView
-                android:id="@+id/txtTora"
-                android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:layout_weight="1"
-                android:background="#D2D79F"
-                android:gravity="center" />
-
-            <View
-                android:id="@+id/divider18"
-                android:layout_width="1dp"
-                android:layout_height="match_parent"
-                android:layout_weight="0"
-                android:background="?android:attr/listDivider" />
-        </LinearLayout>
-
-        <View
-            android:id="@+id/divider13"
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="?android:attr/listDivider" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
-
-            <View
-                android:id="@+id/divider36"
-                android:layout_width="1dp"
-                android:layout_height="match_parent"
-                android:layout_weight="0"
-                android:background="?android:attr/listDivider" />
-
-            <TextView
-                android:id="@+id/txtRegDiaTotal"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:background="#EDA1B77D"
-                android:gravity="center"
-                android:text="TextView" />
-
-            <View
-                android:id="@+id/divider37"
-                android:layout_width="1dp"
-                android:layout_height="match_parent"
-                android:layout_weight="0"
-                android:background="?android:attr/listDivider" />
-        </LinearLayout>
-
-        <View
-            android:id="@+id/divider35"
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="?android:attr/listDivider" />
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
