--- a/app/src/main/res/layout/fragment_graph_reg_dia.xml
+++ b/app/src/main/res/layout/fragment_graph_reg_dia.xml
@@ -27,7 +27,9 @@
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="50dp"
+        android:layout_marginEnd="24dp"
         android:layout_marginBottom="50dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
