--- a/app/src/main/res/layout/fragment_graph_reg_mes.xml
+++ b/app/src/main/res/layout/fragment_graph_reg_mes.xml
@@ -19,190 +19,25 @@
 
     <LinearLayout
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginBottom="50dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/spinnerMeses"
-        app:layout_constraintVertical_bias="0.120000005">
+        app:layout_constraintTop_toBottomOf="@+id/spinnerMeses">
 
-        <View
-            android:id="@+id/divider10"
+        <com.github.mikephil.charting.charts.PieChart
+            android:id="@+id/graficoRegMensal"
             android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="?android:attr/listDivider" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <View
-                android:id="@+id/divider24"
-                android:layout_width="1dp"
-                android:layout_height="match_parent"
-                android:layout_weight="0"
-                android:background="?android:attr/listDivider" />
-
-            <TextView
-                android:id="@+id/textView6"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:background="#90B77D"
-                android:gravity="center"
-                android:text="Metros Cúbicos"
-                android:textStyle="bold" />
-
-            <View
-                android:id="@+id/divider25"
-                android:layout_width="1dp"
-                android:layout_height="match_parent"
-                android:layout_weight="0"
-                android:background="?android:attr/listDivider" />
-
-            <TextView
-                android:id="@+id/textView7"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:background="#90B77D"
-                android:gravity="center"
-                android:text="Tábuas"
-                android:textStyle="bold" />
-
-            <View
-                android:id="@+id/divider26"
-                android:layout_width="1dp"
-                android:layout_height="match_parent"
-                android:layout_weight="0"
-                android:background="?android:attr/listDivider" />
-
-            <TextView
-                android:id="@+id/textView8"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:background="#90B77D"
-                android:gravity="center"
-                android:text="Toras"
-                android:textStyle="bold" />
-
-            <View
-                android:id="@+id/divider27"
-                android:layout_width="1dp"
-                android:layout_height="match_parent"
-                android:layout_weight="0"
-                android:background="?android:attr/listDivider" />
-        </LinearLayout>
-
-        <View
-            android:id="@+id/divider22"
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="?android:attr/listDivider" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <View
-                android:id="@+id/divider28"
-                android:layout_width="1dp"
-                android:layout_height="match_parent"
-                android:layout_weight="0"
-                android:background="?android:attr/listDivider" />
-
-            <TextView
-                android:id="@+id/textView12"
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:layout_weight="1"
-                android:background="#D2D79F"
-                android:gravity="center" />
-
-            <View
-                android:id="@+id/divider29"
-                android:layout_width="1dp"
-                android:layout_height="match_parent"
-                android:layout_weight="0"
-                android:background="?android:attr/listDivider" />
-
-            <TextView
-                android:id="@+id/textView13"
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:layout_weight="1"
-                android:background="#D2D79F"
-                android:gravity="center" />
-
-            <View
-                android:id="@+id/divider30"
-                android:layout_width="1dp"
-                android:layout_height="match_parent"
-                android:layout_weight="0"
-                android:background="?android:attr/listDivider" />
-
-            <TextView
-                android:id="@+id/textView14"
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:layout_weight="1"
-                android:background="#D2D79F"
-                android:gravity="center" />
-
-            <View
-                android:id="@+id/divider31"
-                android:layout_width="1dp"
-                android:layout_height="match_parent"
-                android:layout_weight="0"
-                android:background="?android:attr/listDivider" />
-        </LinearLayout>
-
-        <View
-            android:id="@+id/divider23"
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="?android:attr/listDivider" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
-
-            <View
-                android:id="@+id/divider33"
-                android:layout_width="1dp"
-                android:layout_height="match_parent"
-                android:layout_weight="0"
-                android:background="?android:attr/listDivider" />
-
-            <TextView
-                android:id="@+id/txtRegMesTotal"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:background="#EDA1B77D"
-                android:gravity="center"
-                android:text="TextView" />
-
-            <View
-                android:id="@+id/divider34"
-                android:layout_width="1dp"
-                android:layout_height="match_parent"
-                android:layout_weight="0"
-                android:background="?android:attr/listDivider" />
-        </LinearLayout>
-
-        <View
-            android:id="@+id/divider32"
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="?android:attr/listDivider" />
+            android:layout_height="0dp"
+            android:layout_marginBottom="8dp"
+            android:layout_weight="1" />
 
     </LinearLayout>
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
