--- a/app/src/main/res/layout/fragment_graph_barra.xml
+++ b/app/src/main/res/layout/fragment_graph_barra.xml
@@ -1,17 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragmentos.GraphBarra"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context=".fragmentos.GraphBarra">
 
     <com.github.mikephil.charting.charts.BarChart
+        android:id="@+id/graficoBarras"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:id="@+id/graficoBarras"
-        android:layout_weight="1"
-        android:layout_marginBottom="8dp"/>
+        android:layout_marginTop="32dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/spinner2" />
 
-</LinearLayout>
+    <Spinner
+        android:id="@+id/spinner2"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="24dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
